--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-transformer-sharp": "^4.19.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "reactjs-popup": "^2.0.5",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
