--- a/package.json
+++ b/package.json
@@ -16,15 +16,21 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.7.0",
+    "@sendgrid/mail": "^7.7.0",
     "babel-plugin-styled-components": "^2.0.7",
     "gatsby": "^4.19.0",
     "gatsby-plugin-image": "^2.19.0",
     "gatsby-plugin-sharp": "^4.19.0",
     "gatsby-plugin-styled-components": "^5.19.0",
-    "gatsby-source-filesystem": "^4.19.0",
+    "gatsby-source-filesystem": "^4.24.0",
+    "gatsby-transformer-csv": "^4.24.0",
     "gatsby-transformer-sharp": "^4.19.0",
+    "node-fetch": "^2.6.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
+    "react-responsive": "^9.0.0",
     "reactjs-popup": "^2.0.5",
     "styled-components": "^5.3.5"
   },
